# ccr-py

./: .gitignore  config.example.yaml  pyproject.toml
src/ccr/: cli.py  codex_converter.py  codex_proxy.py  codex_stream.py  config.py  converter.py  debug_log.py  proxy.py  server_state.py
