[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccr-py"
version = "0.1.0"
description = "Lightweight Claude Code router - switch providers, proxy local models"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.scripts]
ccr = "ccr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
